crates/graphite/tests/ui/graph_partial_recovery.stderr
error: expected `,`
  --> tests/ui/graph_partial_recovery.rs:43:47
   |
43 |         tanaka = Employee { name: "田中".into() id: 1 },
   |                                                 ^^
